langchain-nvidia/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redhatai-meta-llama-31-70b-instruct-quantized-w4a16
  labels:
    app: redhatai-meta-llama-31-70b-instruct-quantized-w4a16
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redhatai-meta-llama-31-70b-instruct-quantized-w4a16
  template:
    metadata:
      labels:
        app: redhatai-meta-llama-31-70b-instruct-quantized-w4a16
    spec:
      imagePullSecrets:
        - name: docker-secret
      volumes:
        - name: model-volume
          persistentVolumeClaim:
            claimName: redhatai-meta-llama-31-70b-instruct-quantized-w4a16
        - name: shm
          emptyDir:
            medium: Memory
            sizeLimit: "4Gi"
      serviceAccountName: default
      containers:
        - name: redhatai-meta-llama-31-70b-instruct-quantized-w4a16
          image: 'registry.redhat.io/rhaiis/vllm-cuda-rhel9@sha256:a6645a8e8d7928dce59542c362caf11eca94bb1b427390e78f0f8a87912041cd'
          imagePullPolicy: IfNotPresent
          command:
            - python
            - '-m'
            - vllm.entrypoints.openai.api_server
          args:
            - '--port=8000'
            - '--served-model-name=RedHatAI/Meta-Llama-3.1-70B-Instruct-quantized.w4a16'
            - '--tensor-parallel-size=1'
            - '--model=RedHatAI/Meta-Llama-3.1-70B-Instruct-quantized.w4a16'
            - '--max-model-len=8192'
          ports:
            - containerPort: 8000
              protocol: TCP
          resources:
            limits:
              cpu: '8'
              memory: 64Gi
              nvidia.com/gpu: '1'
            requests:
              cpu: '4'
              memory: 48Gi
              nvidia.com/gpu: '1'
          volumeMounts:
            - name: model-volume
              mountPath: /opt/app-root/src/.cache
            - name: shm
              mountPath: /dev/shm
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 15
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 15
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /health
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 120
      restartPolicy: Always
      tolerations:
        - effect: NoSchedule
          key: g6e-gpu
          operator: Exists
