langchain-nvidia/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llama-31-70b-instruct
spec:
  selector:
    app: redhatai-meta-llama-31-70b-instruct-quantized-w4a16
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      name: http
