langchain-nvidia/deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: llama-31-70b-instruct
  annotations:
    haproxy.router.openshift.io/timeout: 600s
spec:
  to:
    kind: Service
    name: llama-31-70b-instruct
  port:
    targetPort: http
